<resources>
    <string name="app_name">Countries</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="sign_out">Sign Out</string>
    <string name="password">Password</string>
    <string name="email" translatable="false">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="default_web_client_id" translatable="false">95594109482-7fn6tqkb6vbkkgs5ip3v1gelvqnaigk7.apps.googleusercontent.com</string>
    <string name="change_password">Change password</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="capital" translatable="false">Capital:</string>
    <string name="language" translatable="false">Language:</string>
    <string name="population" translatable="false">Population:</string>
    <string name="continent" translatable="false">Continent:</string>
    <string name="currency" translatable="false">Currency:</string>
    <string name="textview">TextView</string>
    <string name="flag">flag</string>
    <string name="start_of_week">Start of week:</string>
    <string name="enter_a_valid_password_and_try_again">Enter a valid password and try again</string>
    <string name="enter_a_valid_email_address_and_try_again">Enter a valid email address and try again</string>
    <string name="google_maps_link">Google maps link</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="main">Main</string>
    <string name="favorites">Favorites</string>
    <string name="account">Account</string>
</resources>